bin/SyntAna/Grammar
*LITERAL = CNT | CTN
*CNT = 'cntLgc' 
		| 'cntChr' 
		| 'cntStr'
*CTN = 	'ctnInt' 
		| 'ctnDbl' 
*TIPO =  NOME
		| TIPOPRIMITIVO
		| 'void'
*TIPOPRIMITIVO =  'tkLgc' 
		| 'tkChr' 
		| 'tkStr'
		| TIPOPRIMITIVONUM
*TIPOPRIMITIVONUM = 'tkInt'  
		| 'tkDbl' 
*NOME = 'id' NOMECOMP
*NOMECOMP = '.' NOME
		| null
*MODIFICADOR  = 'static' 
		| null

Produções referentes a DECCLASSE

UNIDADECOMP = DECCLASSE
*DECCLASSE = MODIFICADOR 'class' 'id' CORPOCLASSE
*CORPOCLASSE = '{' DECSCORPOCLASSE '}'
*DECSCORPOCLASSE = DECMEMBROCLASSE DECC1
*DECC1 = DECMEMBROCLASSE DECC1 
		| null
*DECMEMBROCLASSE =  DECCAMPO 
		| 'method' DECMETODO

Produções referentes a DECCAMPO


*DECCAMPO = MODIFICADOR TIPO DECSVARIAVEL ';'
*DECSVARIAVEL = DECVARIAVEL DECV1
*DECV1 = ','  DECVARIAVEL DECV1 
		| null
*DECVARIAVEL = DECVARIAVELID DECVARIAVELF
*DECVARIAVELF = '=' EXPRESSAO 
		| null
*DECVARIAVELID = 'id' COLARRAY
*COLARRAY = '[' ']'
		| null


Produções referente a DECMETODO

*DECMETODO = '_' CABMETODO CORPOMETODO
*CABMETODO = MODIFICADOR TIPO DECPARAMFOR
*DECPARAMFOR = 'id' '[' LISTPARAMFORMAL ']'
*LISTPARAMFORMAL = PARAMFORMAIS LISTPARAMFORMAL1
		| null
*LISTPARAMFORMAL1 = ',' PARAMFORMAIS LISTPARAMFORMAL
		| null
*PARAMFORMAIS = TIPO DECVARIAVELID 
*CORPOMETODO = BLOCO | ';'

---------

---------
decconstru

*DECCONSTRU = NOMESIMPLES '[' LISTPARAMFORMAL ']'

Produções referentes a BLOCO e DECLARACAO

*BLOCO = '{' DECBLOCO '}'
*DECBLOCO = BLOCODEC DECB1
*DECB1 = DECBLOCO DECB1 
		| null
*BLOCODEC = DECCAMPO 
		| DECLARACAO
*DECLARACAO = DECSEMSUBDECDIR 
		| IFDEC 
        | DECWHILE 
        | DECFOR
*DECSEMSUBDECDIR = BLOCO 
		| ';' 
		| EXPRESSAODEC 
        | DECRETURN 
        | DECBREAK
*EXPRESSAODEC = EXPRINCRPRE 
		| EXPRDECREPRE 
        | EXPRCRIAINSTANCLASSE
        | NOME '[' LISTAARG ']' ATR
*ATR = '=' EXPRATR
*IFDEC = 'if' '[' EXPRATR ']' DECLARACAO ELSEDEC
*ELSEDEC = 'else' DECLARACAO
		| null
*DECWHILE = 'while' '[' EXPRATR ']' DECLARACAO
*DECFOR = 'for' '[' FORINIT ';' LIMITESUP ';' PASSO ']' DECLARACAO
*FORINIT = TIPOPRIMITIVONUM NOME '=' EXPRATR
*LIMITESUP = CTN 
		| NOME
*PASSO = CTN 
		| NOME
*LISTADECEXPR = EXPRESSAODEC LISTADECEXPR1
*LISTADECEXPR1 = ';' LISTADECEXPR LISTADECEXPR1
		| null
*DECRETURN = 'return' EXPRATR ';' 
*DECBREAK = 'break' ';'

Produções referente a EXPRESSAO

*EXPRCRIAINSTANCLASSE = 'new' NOME '[' LISTAARG ']'
*LISTAARG = EXPRATR LISTA1
*LISTA1 = ',' LISTAARG LISTA1
		| null 
*EXPRCRIAARRAY= 'array' '[' TIPO ',' CTN ']'
CHAMADAMETODO = NOME '[' LISTAARG ']'
*ATRIBUICAO = NOME NOME1 '=' EXPRATR 
*NOME1 = '[' EXPRATR ']'
		| null
*EXPRATR = EXPRCOND 
		| ATRIBUICAO
*EXPRCOND = EXPRORCOND EXPRCOND1
*EXPRCOND1 = '?' EXPRATR ':' EXPRCOND 
		| null
*EXPRORCOND = EXPRECOND EXPROR1
*EXPROR1 = '||' EXPRECOND EXPROR1 
		| null 
*EXPRECOND = EXPRIOR EXPREC1 
*EXPREC1 = '&&' EXPRIOR EXPREC1 
		| null
*EXPRIOR = EXPREOR EXPRI1
*EXPRI1 = '|' EXPRIOR EXPRI1 
		| null
*EXPREOR = EXPRE EXPREOR1
*EXPREOR1 = '^' EXPREOR EXPREOR1 
		| null
*EXPRE = EXPREQUA EXPRE1
*EXPRE1 = '&' EXPREQUA EXPRE1 
		| null
*EXPREQUA = EXPRREL EXPREQ1
*EXPREQ1 = '==' EXPREQUA EXPREQ1 
	    | '!=' EXPREQUA EXPREQ1 
		| null
*EXPRREL = EXPRADD EXPRREL1
*EXPRREL1 =  '<' EXPRADD EXPRREL1 
		| '>' EXPRADD EXPRREL1 
		| '<=' EXPRADD EXPRREL1  
		| '>=' EXPRADD EXPRREL1 
		| 'instanceof' 'id' EXPRREL1
		| null
*EXPRADD = EXPRMULT EXPRADD1
*EXPRADD1 = '+' EXPRMULT EXPRADD1
        |  '-' EXPRMULT EXPRADD1 
        | null
*EXPRMULT = EXPRUNARIA EXPRMULT1
*EXPRMULT1 = '*' EXPRUNARIA EXPRMULT1 
		| '/' EXPRUNARIA EXPRMULT1 
		| '%' EXPRUNARIA EXPRMULT1
        | null
*EXPUNNMM = EXPRPOSF 
		| '~' EXPRUNARIA 
		| '!' EXPRUNARIA
*EXPRDECREPRE = '--' EXPRUNARIA
*EXPRINCRPRE =  '++' EXPRUNARIA
*EXPRUNARIA = '+' EXPRUNARIA
        | '-' EXPRUNARIA 
        | EXPRPOSF 
        | EXPRINCRPRE
        | EXPRDECREPRE 
        | EXPUNNMM
*EXPRDECREPOS = EXPRPOSF '--'
*EXPRINCRPOS = EXPRPOSF '++'
*EXPRPOSF = 'this' 
        | '[' EXPRATR ']'
        | LITERAL
        | EXPRCRIAINSTANCLASSE
		| EXPRCRIAARRAY
		| NOME CHAMADA
*CHAMADA =  '[' LISTAARG ']'
		| null
